[gd_scene load_steps=10 format=3 uid="uid://cyfwty2q3rdse"]

[ext_resource type="Script" path="res://Main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://rkdnhqgf2hpj" path="res://Mob.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://4vwrqjegqwpj" path="res://Player.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://dtpq5et2u6qgr" path="res://Glacial-mountains-parallax-background_vnitti/background_glacial_mountains_lightened.png" id="3_7jvvf"]
[ext_resource type="Script" path="res://Background.gd" id="3_55mv7"]
[ext_resource type="PackedScene" uid="uid://ccqoreueuxdb7" path="res://HUD.tscn" id="4"]
[ext_resource type="AudioStream" uid="uid://q2pf4fr8d0ks" path="res://art/House In a Forest Loop.ogg" id="5"]
[ext_resource type="AudioStream" uid="uid://dw26fpygeag8o" path="res://art/gameover.wav" id="6"]

[sub_resource type="Curve2D" id="1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1")
mob_scene = ExtResource("2")

[node name="Background" type="ParallaxBackground" parent="."]
script = ExtResource("3_55mv7")

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2(1287, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxLayer"]
position = Vector2(0, 362)
scale = Vector2(3.35185, 3.35185)
texture = ExtResource("3_7jvvf")

[node name="Player" parent="." instance=ExtResource("3")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("1")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")

[connection signal="hit" from="Player" to="." method="been_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
